# token-launchpad

./: .example.env  .gitignore  Cargo.toml  LICENSE  README.md  optimize.sh  package-lock.json  package.json  tsconfig.json
artifacts/: checksums.txt  cw404_base.wasm
contracts/coin-base/: Cargo.toml
contracts/coin-base/examples/: schema.rs
contracts/coin-base/src/: contract.rs  lib.rs  reply.rs  state.rs
contracts/coin-base/src/execute/: config.rs  ft.rs
contracts/coin-base/src/query/: config.rs  ft.rs  mod.rs
contracts/coin-base/src/util/: assert_helper.rs  astroport.rs  mod.rs  token_factory.rs
contracts/cw404-base/: Cargo.toml
contracts/cw404-base/examples/: schema.rs
contracts/cw404-base/src/: contract.rs  error.rs  lib.rs  state.rs
contracts/cw404-base/src/execute/: config.rs  ft.rs  nft.rs
contracts/cw404-base/src/query/: config.rs  ft.rs  mod.rs  nft.rs
contracts/cw404-base/src/sudo/: ft.rs  mod.rs
contracts/cw404-base/src/util/: assert.rs  commom.rs  denom.rs  mod.rs  nft.rs  token_factory.rs
contracts/launchpad/: Cargo.toml
contracts/launchpad/.cargo/: config
contracts/launchpad/examples/: schema.rs
contracts/launchpad/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/launchpad/src/execute/: coin.rs  config.rs  cw404.rs
contracts/launchpad/src/query/: coin.rs  config.rs  cw404.rs  mod.rs
contracts/launchpad/src/reply/: coin.rs  cw404.rs  mod.rs
scripts/: code_ids.json  contract_addresses.json  env.ts  store_code_and_init.ts  util.ts  yolo.ts
scripts/execute/: approve_all_nft.ts  approve_nft.ts  burn_ft.ts  burn_nft.ts  contract_send_ft.ts  eoa_send_ft.ts  force_transfer_ft.ts  mint_ft.ts  revoke.ts  revoke_all.ts  send_nft.ts  transfer_nft.ts
scripts/execute/astroport/: swap.ts
scripts/execute/cw404/: approve_all_nft.ts  approve_nft.ts  burn_ft.ts  burn_nft.ts  force_transfer_ft.ts  mint_ft.ts  revoke.ts  revoke_all.ts  send_nft.ts  transfer_nft.ts
scripts/execute/eoa/: send_ft.ts
scripts/execute/launchpad/: create_coin.ts  create_collection.ts  create_cw404_collection.ts  mint_ft.ts
scripts/query/: all_nft_info.ts  all_nft_tokens.ts  config_and_balance_and_supply.ts  denom_and_balance_and_supply.ts  nft_contract_info.ts  nft_info.ts  nft_num_tokens.ts  nft_owner.ts  nft_tokens.ts
scripts/query/astroport/: simulate_swap.ts
scripts/query/coin/: config_and_balance_and_supply.ts
scripts/query/cw404/: all_nft_info.ts  all_nft_tokens.ts  config_and_balance_and_supply.ts  nft_contract_info.ts  nft_info.ts  nft_num_tokens.ts  nft_owner.ts  nft_tokens.ts
scripts/query/launchpad/: coins.ts  coins_by_creator.ts  config.ts  cw404.ts  cw404s.ts  cw404s_by_creator.ts  stats.ts
