[workspace]
resolver = "2"
members = ["contracts/*", "packages/*"]

[workspace.package]
version = "0.1.0"
authors = ["luc", "boc"]
edition = "2021"
keywords = ["cosmos", "cosmwasm"]

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
# cosmos dependencies
osmosis-std = "0.22.0"
cosmwasm-std = { version = "1.4.1", features = ["cosmwasm_1_3"] }
cosmwasm-storage = "1.4.1"
cosmwasm-schema = "1.4.1"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw721 = "0.18.0"

thiserror = "1.0.52"

# dev-dependencies
cw-multi-test = "0.20.0"
anyhow = "1.0.77"

# my packages
cw404 = { path = "./packages/cw404" }

# my contracts
cw404-base = { path = "./contracts/cw404-base" }
