[workspace]
resolver = "2"
members = ["contracts/*", "packages/*"]

[workspace.package]
version = "0.1.0"
authors = ["luc", "boc"]
edition = "2021"
keywords = ["cosmos", "cosmwasm"]

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
# cosmos dependencies
osmosis-std = "0.22.0"
cosmwasm-std = { version = "1.4.1", features = ["cosmwasm_1_1"] }
cosmwasm-storage = "1.4.1"
cosmwasm-schema = "1.4.1"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2 = "1.1.2"
cw721 = "0.18.0"
cw721-base = "0.18.0"
cw721-metadata-onchain = "0.15.0"
astroport = "3.11.1"

thiserror = "1.0.52"
sha3 = "0.10.8"
hex = "0.4.3"

# dev-dependencies
cw-multi-test = "0.20.0"
anyhow = "1.0.77"

# my packages
cw404 = { path = "./packages/cw404" }
coin = { path = "./packages/coin" }
launchpad-pkg = { path = "./packages/launchpad-pkg" }
shared-pkg = { path = "./packages/shared-pkg" }

# my contracts
cw404-base = { path = "./contracts/cw404-base" }
coin-base = { path = "./contracts/coin-base" }
launchpad = { path = "./contracts/launchpad" }
